<resources>

    <string name="app_name">TEMPERATURE CONVERTER</string>
    <string name="btnconvert">Convert</string>
    <string name="hello_world">Hello World!</string>
    <string name="hint">Input Temperature </string>
    <string name="radCtoF">Celsius to Fahrenheit</string>
    <string name="radFtoC">Fahrenheit to Celsuis</string>

    <string name="txTitle">Temperature Convert</string>


</resources>